fix dogs on mobile

--- a/src/app/components/blocks/dogs/doughnut-chart.module.css
+++ b/src/app/components/blocks/dogs/doughnut-chart.module.css
@@ -20,7 +20,7 @@
     top: 25%;
     left: 25%;
     width: 50%;
-    aspect-ratio: 1/1;
+    height: 50%;
     overflow: hidden;
 }
 
